--- a/curso/Modulo1/Modulo1/Modulo1.csproj
+++ b/curso/Modulo1/Modulo1/Modulo1.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{895CD5E3-E426-40CF-99CC-CDE454B05F29}</ProjectGuid>
+    <ProjectGuid>{1D79C579-480F-42BD-BE52-5A9F4FAB095C}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Testes</RootNamespace>
-    <AssemblyName>Testes</AssemblyName>
+    <RootNamespace>Modulo1</RootNamespace>
+    <AssemblyName>Modulo1</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
@@ -19,6 +19,7 @@
     <WarningLevel>4</WarningLevel>
     <Externalconsole>true</Externalconsole>
     <PlatformTarget>x86</PlatformTarget>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <DebugType>full</DebugType>
