--- a/curso/Modulo2/Modulo2/Modulo2.csproj
+++ b/curso/Modulo2/Modulo2/Modulo2.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Aluno.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
