--- a/curso/Modulo2/Lista3Exercicio14/Lista3Exercicio14.csproj
+++ b/curso/Modulo2/Lista3Exercicio14/Lista3Exercicio14.csproj
@@ -36,6 +36,8 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Aluno.cs" />
+    <Compile Include="ListaDeAlunos.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
